--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AddActivity" android:label="@string/activity_add_label">
-
-        </activity>
+        <activity android:name=".EditRemoveActivity"></activity>
+        <activity
+            android:name=".AddActivity"
+            android:label="@string/activity_add_label"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
